# honeypot

./: .env.example  .gitignore  Cargo.toml  PROMPT.md  README.md  audit.toml  build.rs  justfile  rustfmt.toml  settings.example.yml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
migrations/: 0001_guild_configs.sql
src/: config.rs  logging.rs  main.rs  telemetry.rs
src/agent/: mod.rs  prompt.rs  runtime.rs
src/db/: guild_config.rs  mod.rs  models.rs
src/discord/: client.rs  handler.rs  mod.rs
src/discord/commands/: config.rs
src/models/: secret_key.rs
src/moderation/: mod.rs  pipeline.rs  verdict.rs
src/moderation/rules/: invite_link.rs  mention.rs  mod.rs
