[package]
name = "honeypot"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-openai = { version = "0.41", features = ["chat-completion"] }
chrono = "0.4"
colored = "3"
config = "0.15"
dotenvy = "0.15"
indicatif = "0.18"
rand = "0.10"
secrecy = "0.10"
serenity = { version = "0.12", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.52", features = ["full"] }
tokio-retry = "0.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zeroize = "1.9"
